# pair-compression

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  KODAK_ANALYSIS.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  REPRODUCE.md  SESSION_PROMPTS.md  SIMPLE_EXPLANATION.md  analyze_pair_results.py  benchmark.py  generate_charts.py  kodak_benchmark.py  kodak_benchmark_pair.py  pyproject.toml  requirements.txt  results_summary.txt  setup.py
experiments/: analyze_sweep_v3.py  bench_ablation.py  bench_extended_baselines.py  bench_sweep_v3.py  bench_vanilla_j2k.py  compute_lpips.py  compute_stats.py  extended_baselines.json  literature_survey.md  make_qualitative.py  plot_ablation.py  plot_rd_curves.py  verify_fairness.py
experiments/ablation/: all_results.json
experiments/sweep_v3/: analysis.json  results.json
experiments/vanilla_j2k/: results.json
kodak_results/: benchmark_results.json
kodak_results/charts/: kodak_table.tex
pair_results/: benchmark_results.json
pair_results_glymur/: benchmark_results.json
paper/: ARXIV_METADATA.txt  COMPILE_INSTRUCTIONS.md  PAIR_paper.tex  PAIR_paper_v2.tex  PAIR_paper_v3.tex  README_PAIR.md
pawc/: __init__.py  __main__.py  adaptive_wavelet.py  binary_codec.py  config.py  core.py  entropy_coding.py  huffman_coder.py  importance_map.py  jpeg2000_backend.py  metrics.py  pair_codec.py  pawc_v2_codec.py  quantization.py  simple_pawc_v2.py  wavelet_transform.py
tests/: test_importance_map.py  test_integration.py  test_metrics.py  test_pair_codec.py  test_quantization.py  test_wavelet.py
